--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,5 +13,17 @@
     margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
+    background-color: #f7ff85;
+    transition: transform 0.3s ease;
+    transform-origin: center;
+    text-decoration: none;
+}
+
+.lego-card:hover {
+    transform: scale(1.1);
+}
+
+body {
+    background: linear-gradient(to bottom, #f1f6b7, #f3f88a);
+    background-size: 400% 400%;
 }
