--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,21 @@
 }
 
 body {
-    background: linear-gradient(to bottom, #f1f6b7, #f3f88a);
+    background: linear-gradient(-45deg, #e5e7a9, #adbf6e, #cccf8f, #e9ff87);
     background-size: 400% 400%;
-}
+    animation: gradient 15s ease infinite;
+    min-height: 100vh;
+    margin: 0;
+  }
+  
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
