--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
     <div class="nav-auth">
       <% if user_signed_in? %>
         <span class="user-email"><%= current_user.email %></span>
+            <%= link_to cart_path do %>
+            <i>CART</i>
+        <% end %>
         <% if current_user.admin? %>
           <span class="admin-badge">Admin</span>
         <% end %>
