--- a/app/views/legos/index.html.erb
+++ b/app/views/legos/index.html.erb
@@ -32,7 +32,7 @@
 <style>
   .lego-shop {
     max-width: 800px;
-    margin: 0 auto;
+    margin: 40px auto;
     padding: 20px;
     background-color:rgb(223, 223, 161);
     border: 1px;
@@ -61,7 +61,7 @@
 
   .logo-label {
     position: absolute;
-    top: 120px;
+    top: 160px;
     left: 40%;
     margin-left: 10px;
     margin-top: 10px;
