--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,31 +1,33 @@
 <div class="cart-container">
     <h1 class="cart-title">Your Shopping Cart</h1>
 
-    <% if @cart.cart_items.any? %>
-        <div class="cart-items">
-        <% @cart.cart_items.each do |item| %>
-            <div class="cart-item">
-            
-            <div class>
-                <h3 class><%= item.lego.name %></h3>
-                <p><%= number_to_currency(item.lego.price) %></p>
-            </div>
+  <% if @cart.cart_items.any? %>
+    <div class="cart-items">
+      <% @cart.cart_items.each do |item| %>
+        <div class="cart-item">
+          
+          <div>
+            <h3><%= item.lego.name %></h3>
+            <p><%= number_to_currency(item.lego.price) %></p>
+          </div>
 
-            <div class>
-                <p>Total: <%= number_to_currency(item.lego.price) %> * <%= item.quantity %></p>
-                <p>== <%= number_to_currency(item.lego.price * item.quantity) %> ==</p>
-                <%= button_to "Remove", remove_item_cart_path(item_id: item.id), method: :delete, class: "remove-btn" %>
-            </div>
-        <% end %>
+          <div>
+            <p>Total: <%= number_to_currency(item.lego.price) %> * <%= item.quantity %></p>
+            <p>== <%= number_to_currency(item.lego.price * item.quantity) %> ==</p>
+            <%= button_to "Remove", remove_item_cart_path(item_id: item.id), method: :delete, class: "remove-btn" %>
+          </div>
+        </div>
+      <% end %>
 
         <div>
-            <span>Subtotal:</span>
-            <span><%= number_to_currency(@cart.cart_items.sum { |item| item.lego.price * item.quantity }) %></span>
+          <span>Subtotal:</span>
+          <span><%= number_to_currency(@cart.cart_items.sum { |item| item.lego.price * item.quantity }) %></span>
         </div>
+    </div>
+  <% end %>
+    <%= link_to "Continue Shopping", legos_path, class: "continue-shopping" %>
 </div>
-    <% end %>
-        <%= link_to "Continue Shopping", legos_path, class: "continue-shopping" %>
-        
+
 <style>
 .cart-container {
   max-width: 800px;
@@ -77,7 +79,6 @@
   color: white;
   text-decoration: none;
   border-radius: 4px;
-  text-align: center;
 }
 
 </style>
