--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,14 @@
 
   <body>
     <div class="nav-auth">
+      <%= link_to root_path do %>
+        <%= image_tag "home.jpg", class: "home-link" %>
+      <% end %>
       <% if user_signed_in? %>
         <span class="user-email"><%= current_user.email %></span>
-            <%= link_to cart_path do %>
-            <i>CART</i>
-        <% end %>
+          <%= link_to cart_path do %>
+            <%= image_tag "cart.jpg", class: "cart-icon" %>
+          <% end %>
         <% if current_user.admin? %>
           <span class="admin-badge">Admin</span>
         <% end %>
@@ -32,12 +35,34 @@
         <%= link_to "Log in", new_user_session_path, class: "auth-button login" %>
         <%= link_to "Sign up", new_user_registration_path, class: "auth-button signup" %>
       <% end %>
-  </div>
+    </div>
+    <div>
+      <% if current_user.admin? %>
+        <%= link_to "Add new Lego", new_lego_path, class: "new-lego-link" %>
+      <% end %>
+    </div>
     <%= yield %>
   </body>
 </html>
 
 <style>
+  .home-link {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    top: 20px;
+    left: 10px;
+  }
+
+  .cart-icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+  }
+
   .nav-auth {
   position: absolute;
   top: 20px;
@@ -87,6 +112,18 @@
 .auth-button:hover {
   transform: translateY(-1px);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.new-lego-link {
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  background-color: #28a745;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 4px;
+  text-decoration: none;
+  font-weight: 600;
 }
 
 </style>
