--- a/app/views/legos/new.html.erb
+++ b/app/views/legos/new.html.erb
@@ -1,7 +1,7 @@
 <div class="lego-form-container">
     <h1 class="form-title">Create New LEGO Set</h1>
     <div class="form-wrapper">
-        <%= form_with model: @lego do |form| %>
+        <%= form_with(model: @lego, local: true) do |form| %>
             <div>
                 <div class="form-group">            
                     <h1 class="form-label">Name</h1>
