--- a/app/views/legos/show.html.erb
+++ b/app/views/legos/show.html.erb
@@ -2,20 +2,20 @@
   <div>
     <% dom_id @lego %>
     <div>
-      <h1><%= @lego.name %></h1>
+      <h1 class="name"><%= @lego.name %></h1>
     </div>
-      <h2>Product Details: </h2>
-      <p><%= number_to_currency(@lego.price) %></p>
-      <p>Pieces: <%= @lego.details %></p>
+      <h3>Product Details: </h3>
+      <p>Price: <%= number_to_currency(@lego.price) %></p>
+      <h2><%= image_tag "block.jpg", class: "block-icon" %>: <%= @lego.details %></h2>
     <div>
       <p><%= @lego.description %></p>
     </div>
 
     <div>
-      <%= link_to 'Back to Catalog', legos_path, class: "button" %>
+      <%= link_to 'Back to Catalog', legos_path, class: "button-back" %>
 
       <% if user_signed_in? %>
-        <%= button_to 'Add to Cart', add_item_cart_path(lego_id: @lego.id), method: :post, class: "button" %>
+        <%= button_to 'Add to Cart', add_item_cart_path(lego_id: @lego.id), method: :post, class: "button-add" %>
       <% end %>
 
       <% if user_signed_in? %>
@@ -35,17 +35,16 @@
         </h3>
           <% @lego.opinions.includes(:user).each do |opinion| %>
             <div class="cart-container">
-              <% if user_signed_in? && current_user == opinion.user %>
-                <%= button_to 'Delete Opinion', lego_opinion_path(@lego, opinion), method: :delete, class: "button" %>
-                <%= link_to 'Edit Opinion', edit_lego_opinion_path(@lego, opinion), class: "button" %>
-              <% end %>
               <p>User: <%= opinion.user.email %></p>
               <p>Rating: <% opinion.rating.times do %>
                 ⭐
               <% end %>
-              </p>
               <p>Opinion: <%= opinion.comment %></p>
               <small>Created at: <%= opinion.created_at.strftime("%d/%m/%Y") %></small>
+              <% if user_signed_in? && current_user == opinion.user %>
+                <%= button_to 'Delete Opinion', lego_opinion_path(@lego, opinion), method: :delete, class: "button-del" %>
+                <%= link_to 'Edit Opinion', edit_lego_opinion_path(@lego, opinion), class: "button-edit" %>
+              <% end %>
             </div>
           <% end %>
       </div>
@@ -79,16 +78,30 @@
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
-.button {
+.button-back {
+  position: relative;
+  left: 600px;
   padding: 8px 16px;
   margin-right: 10px;
   margin-top: 10px;
   border-radius: 4px;
   text-decoration: none;
   display: inline-block;
-  background-color:rgb(103, 235, 169);
-  color: black;
-  border: black;
+  background-color:rgb(251, 255, 21);
+  border: 1px solid black;
+}
+
+.button-add {
+  position: relative;
+  top: -45px;
+  left: 20px;
+  width: 150px;
+  height: 40px;
+  border-radius: 4px;
+  text-decoration: none;
+  display: inline-block;
+  background-color:rgb(86, 232, 252);
+  cursor: pointer;
 }
 
 .button-delete {
@@ -103,5 +116,45 @@
   background-color: rgb(255, 0, 0);
   color: white;
   border: none;
+}
+
+.block-icon {
+  width: 50px;
+  height: 50px;
+  margin-right: 5px;
+}
+
+.name {
+  font-size: 35px;
+  margin-bottom: 10px;
+  color: #333;
+  text-align: center;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+}
+
+.button-edit {
+  position: relative;
+  left: 330px;
+  top: -40px;
+  width: 150px;
+  height: 36px;
+  border-radius: 4px;
+  text-decoration: none;
+  display: inline-block;
+  background-color:rgb(168, 218, 241);
+  border: 2px solid black;
+  text-align: center;
+}
+
+.button-del {
+  position: relative;
+  left: 500px;
+  width: 150px;
+  height: 40px;
+  border-radius: 4px;
+  text-decoration: none;
+  display: inline-block;
+  background-color:rgb(246, 111, 111);
 }
 </style>
