--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,22 +23,37 @@
         <%= image_tag "home.jpg", class: "home-link" %>
       <% end %>
       <% if user_signed_in? %>
-        <span class="user-email"><%= current_user.email %></span>
+
+        <% if user_signed_in? && current_user.admin? == false %>
+          <span class="user-email"><%= current_user.email %></span>
+        <% elsif user_signed_in? && current_user.admin? %>
+          <span class="admin-email"><%= current_user.email %></span>
+        <% end %>
+
           <%= link_to cart_path do %>
             <%= image_tag "cart.jpg", class: "cart-icon" %>
           <% end %>
-        <% if current_user.admin? %>
-          <span class="admin-badge">Admin</span>
-        <% end %>
+        <div>
+          <% if user_signed_in? && current_user.admin? %>
+            <div class="admin-actions">
+              <%= form_tag legos_path, method: :get do %>
+                <%= select_tag :admin_filter,
+                  options_for_select([
+                    ['All', 'all'],
+                    ['Hidden', 'hidden'],
+                    ['Visible', 'visible'],
+                    ['Add new', 'new']
+                  ], params[:admin_filter]),
+                  onchange: 'this.form.submit()',
+                  class: "admin-select" %>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
         <%= button_to "Log out", destroy_user_session_path, method: :delete, class: "auth-button logout" %>
       <% else %>
         <%= link_to "Log in", new_user_session_path, class: "auth-button login" %>
         <%= link_to "Sign up", new_user_registration_path, class: "auth-button signup" %>
-      <% end %>
-    </div>
-    <div>
-      <% if current_user.admin? %>
-        <%= link_to "Add new Lego", new_lego_path, class: "new-lego-link" %>
       <% end %>
     </div>
     <%= yield %>
@@ -98,7 +113,11 @@
 }
 
 .user-email {
-  color: #666;
+  color: rgba(0, 0, 0, 0.1);
+}
+
+.admin-email {
+  color: rgb(255, 0, 0);
 }
 
 .admin-badge {
