--- a/app/views/legos/show.html.erb
+++ b/app/views/legos/show.html.erb
@@ -54,6 +54,8 @@
 
 <% if user_signed_in? && current_user.admin? %>
   <%= button_to 'Delete', lego_path(@lego), method: :delete, class: "button-delete" %>
+  <%= link_to 'Edit', edit_lego_path(@lego), class: "button-edit-lego" %>
+  <%= button_to @lego.hidden? ? 'Unhide' : 'Hide', toggle_hidden_lego_path(@lego), method: :patch, class: "button-visible" %>
 <% end %>
 
 <style>
@@ -116,6 +118,34 @@
   background-color: rgb(255, 0, 0);
   color: white;
   border: none;
+}
+
+.button-visible {
+  position: absolute;
+  top: 200px;
+  right: 20px;
+  width: 100px;
+  height: 30px;
+  border-radius: 4px;
+  text-decoration: none;
+  display: inline-block;
+  background-color: rgb(68, 246, 255);
+  border: none;
+}
+
+.button-edit-lego {
+  position: absolute;
+  top: 250px;
+  right: 20px;
+  width: 100px;
+  height: 30px;
+  border-radius: 4px;
+  text-decoration: none;
+  display: inline-block;
+  background-color: rgb(52, 36, 36);
+  color: white;
+  border: none;
+  text-align: center;
 }
 
 .block-icon {
