--- a/app/views/legos/show.html.erb
+++ b/app/views/legos/show.html.erb
@@ -80,7 +80,7 @@
     max-width: 800px;
     margin: 40px auto;
     padding: 20px;
-    background-color:rgb(223, 223, 161);
+    background-color:rgba(223, 223, 161, 0.56);
     border: 1px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
